# libkovan

./: .gitignore  CMakeLists.txt  Readme.markdown  test.cpp
bindings/: camera.i  create.i  kovan.i  motor.hpp  motor.i
bindings/java/: camera.i  motor.hpp  motor.i
bindings/java/org/kipr/kovan/: Buttons.java  Loader.java
compat/: mingw.c  mingw.cpp
doxygen/: Doxyfile  Doxyfile++  metadata.ini
include/: analog.h  analog.hpp  battery.h  battery.hpp  button.h  button.hpp  button_ids.hpp  camera.h  camera.hpp  common.hpp  console.h  console.hpp  create.h  create.hpp  create_codes.h  digital.h  digital.hpp  draw.h  draw.hpp  general.h  ir.h  ir.hpp  kovan.h  kovan.hpp  motors.h  motors.hpp  private.hpp  reflection.hpp  sensor.hpp  sensor_logic.hpp  servo.h  servo.hpp  servos.h  util.h  util.hpp  wifi.h  wifi.hpp
include/kovan/: accel.h  accel.hpp  analog.h  analog.hpp  ardrone.h  ardrone.hpp  audio.h  battery.h  battery.hpp  botball.h  button.h  button.hpp  button_ids.hpp  camera.h  camera.hpp  colinear_segmenter.hpp  color.hpp  compat.hpp  config.hpp  console.h  console.hpp  create.h  create.hpp  create_codes.h  datalog.h  datalog.hpp  debug.h  depth.h  depth_driver.hpp  depth_exception.hpp  depth_image.hpp  depth_resolution.h  digital.h  digital.hpp  display.h  draw.h  draw.hpp  export.h  general.h  geom.h  (+29 more)
include/libkipr_link_depth_sensor/: BoundingBox.hpp  Color.hpp  ConnectedComponents.hpp  DepthCameraOrientation.h  DepthCameraResolution.h  DepthDriver.hpp  DepthImage.hpp  DepthImageCoordinate.hpp  DepthImageSize.hpp  Exception.hpp  Library.h  OpenNI2DepthDriver.hpp  OpenNI2DepthImage.hpp  Point.hpp  PointCloud.hpp  PointCloud2D.hpp  WorldCoordinate.hpp  depth.h  depth_driver.hpp  depth_resolution.h  openni2_depth_driver.hpp  openni2_depth_image.hpp
src/: ConnectedComponents.cpp  DepthDriver.cpp  OpenNI2DepthDriver.cpp  OpenNI2DepthImage.cpp  PointCloud2D.cpp  accel.cpp  accel_c.cpp  analog.cpp  analog_c.cpp  analog_p.cpp  analog_p.hpp  ardrone.cpp  ardrone_c.cpp  ardrone_constants_p.hpp  ardrone_emergency_stop_p.cpp  ardrone_emergency_stop_p.hpp  ardrone_video_p.cpp  ardrone_video_p.hpp  audio.cpp  battery.cpp  battery_c.cpp  battery_p.cpp  battery_p.hpp  botball_c.cpp  build_options.h  button.cpp  button_c.cpp  button_p.cpp  button_p.hpp  camera.cpp  camera_c.cpp  camera_c_p.cpp  camera_c_p.hpp  channel_p.cpp  channel_p.hpp  colinear_segmenter.cpp  common_p.cpp  common_p.hpp  compat.cpp  config.cpp  (+75 more)
src/pixeltoaster/: PixelToasterApple.mm  PixelToasterWindows.h
test/: CMakeLists.txt
test/analog/: analog.cpp
test/ardrone/: CMakeLists.txt  ardrone.c  ardrone.cpp
test/battery/: CMakeLists.txt  power_level.c  power_level.cpp
test/botball/: CMakeLists.txt  shutdown_in.c
test/button/: CMakeLists.txt  button.c  button.cpp
test/camera/: CMakeLists.txt  camera.cpp
test/config/: CMakeLists.txt  config.cpp
test/create/: CMakeLists.txt  create.cpp
test/datalog/: CMakeLists.txt  datalog.c
test/digital/: digital.c  leds.c  pullup.c
test/draw/: CMakeLists.txt  draw.c  draw.cpp
test/motors/: back_emf.c  motor.c
test/servo/: CMakeLists.txt  sine.c  sine.cpp
test/time/: CMakeLists.txt  msleep.c
tools/: vtable_gen.cpp  vtable_impl.cpp
wrappers/: generate_wrappers.sh  kovan.i  kovan.ipp
wrappers/clisp/: kovan.lisp
wrappers/d/: kovan.d  kovan_d.cpp  kovan_im.d
wrappers/java/: AButton.java  AbstractButton.java  BButton.java  Battery.java  SWIGTYPE_p_port_t.java  Servo.java  ZButton.java  kovan.java  kovanJNI.java  kovan_java.cpp
wrappers/python/: kovan.py  kovan_python.c  kovan_python.cpp
